--- a/!amotf/localisation/replace/prov_changes_l_english.yml
+++ b/!amotf/localisation/replace/prov_changes_l_english.yml
@@ -13,6 +13,7 @@
  PROV92:0 "Brussel"
  PROV97:0 "Amsterdam"
  PROV99:0 "Veluwe"
+ PROV122:0 "Taranto"
  PROV127:0 "Gallura"
  PROV136:0 "Zadar"
  PROV140:0 "Lasva"
@@ -44,7 +45,7 @@
  PROV253:0 "Outer Hebrides"
  PROV261:0 "Halych"
  PROV265:0 "Brno"
- PROV268:0 "Iasi"
+ PROV268:0 "Botosani"
  PROV313:0 "Arkhangelsk"
  PROV316:0 "Nicomedia"
  PROV317:0 "Prusa"
@@ -149,6 +150,9 @@
  PROV500:0 "Hairoun"            #Saint Vincent
  PROV501:0 "Ichirouganaim"          #Barbados
  PROV502:0 "Iëre"
+ PROV756:0 "Kirimurê"          #Credit to Arga
+ PROV763:0 "Goanã-pará"          #Credit to Arga
+ PROV766:0 "Piratininga"          #Credit to Arga
  PROV770:0 "Kreva"
  PROV774:0 "Geneina"
  PROV789:0 "Eswatini"
@@ -510,9 +514,14 @@
  PROV2800:0 "Kosti"            #Actually the same as vanilla, but adding here anyway to prevent changes with vanilla
  PROV2801:0 "Ain Farah"
  PROV2802:0 "Daein"         #Poor name, want another
+ PROV2811:0 "Maracoa"         #Credit to Arga
+ PROV2852:0 "Tacuaremboty"         #Credit to Arga
  PROV2856:0 "Mangaung"         #ERROR - Bantu name in what was probably San (Khoisan) land
  PROV2864:0 "Kakamas "
  PROV2880:0 "Griquatown"          #ERROR - Griquatown, naming being problematic.
+ PROV2887:0 "Meiembipe"         #Credit to Arga   Carijó name, which is a subdivision of Tupi not represented ingame living here
+ PROV2930:0 "Tupaiús"         #Credit to Arga
+ PROV2934:0 "Manaós"         #Credit to Arga   name of tribe chiefdom
  #PROV2954:0 "Djerba"            #Actually the same as vanilla, but adding here anyway to prevent changes with vanilla
  PROV2963:0 "Krajna"
  PROV2986:0 "Cagliari"
@@ -691,6 +700,7 @@
  PROV4560:0 "Pityuses"         #Formerly 5095
  
  PROV4562:0 "Nedroma"         #Formerly 5319
+ PROV4565:0 "Achinet"
  PROV4566:0 "Hbira"
  PROV4567:0 "Ghadames"         #Formerly 5308
  
