--- a/!2amotf/localisation/varangian_guard_l_english.yml
+++ b/!2amotf/localisation/varangian_guard_l_english.yml
@@ -1,8 +1,9 @@
 ﻿l_english:
- BYZ:0 "Basileia vo Rhomaion"
+ #BYZ:0 "Basileia von Rhomaion"
+ BYZ:0 "Basileia Rhoma"
  BYZ_ADJ:0 "Rhomaion"
  BYZ_ADJ2:0 "Byzantine"
- LAT:0 "Imperium of Latins"
+ LAT:0 "Duchy de Latins"
  LAT_ADJ:0 "Latins"
  LAT_ADJ2:0 "Latin"
  byzantine:0 "Rhomaion"
@@ -34,11 +35,11 @@
  colonyBYZ.1.t:0 "Iraqi Migration"
  colonyBYZ.1.d:0 "People from the Capitol and countryside are flooding into our newly won Teritory in the east. This has caused a hybrid culture to appear in the largest reigonal city. This Arabic Hellenic culture should make the region easier to control"
  colonyBYZ.1.a:0 "Glory to Rhomaion!"
- 
+
  colonyBYZ.2.t:0 "Colony Set up in the New World"
  colonyBYZ.2.d:0 "People from the Capitol and countryside are flooding into our newly won Teritory in the east. This has caused a hybrid culture to appear in the largest reigonal city. This Arabic Hellenic culture should make the region easier to control"
  colonyBYZ.2.a:0 "Glory to Rhomaion!"
- 
+
  resurgent_BYZ.5.a:0 "Favor The Book Writers!"
  motf_gran_city:0 "Gran City Europa"
  desc_motf_gran_city:0 "This is one of the major cities of Europa and, as such, is granted bonuses accordingly."
@@ -50,10 +51,8 @@
  desc_motf_gran_city_byz2:0 "As the co-Capital of the Roman Empire in the east, we will reguild to become a grand city"
  motf_gran_city_wien:0 "Gran City of Vienna"
  desc_motf_gran_city_wien:0 "This is one of the major cities of the Holy Roman Empire and head of the mighty Habsburg house"
- 
+
  diplo_reach:0 "Our Joined Dynasty With House von Komnenos"
  desc_diplo_reach:0 "When the German Side of our dynasty joined, we gained connections to the West. We also benifit from the skills and gifts the Germanic Barbarians give."
  latin_bad:0 "We are still outsiders"
  desc_latin_bad:0 "After the failed Council of Florence, The fourth Crusade and the fact we still have not fully been recognized by the populace, we are not able to manage much in the way of conversion."
- 
- 
