--- a/!2amotf/localisation/varangian_guard_l_english.yml
+++ b/!2amotf/localisation/varangian_guard_l_english.yml
@@ -1,11 +1,16 @@
 ﻿l_english:
+ FEO:0 "Gothia"
  #BYZ:0 "Basileia von Rhomaion"
  BYZ:0 "Basileia Rhoma"
  BYZ_ADJ:0 "Rhomaion"
  BYZ_ADJ2:0 "Byzantine"
- LAT:0 "Duchy de Latins"
+ LAT:0 "Duchy de Latin"
  LAT_ADJ:0 "Latins"
  LAT_ADJ2:0 "Latin"
+ ARV:0 "Aravika"
+ ARV_ADJ:0 "Aravi"
+ PTS:0 "Portius Thyrida"
+ PTS_ADJ:0 "Portan"
  byzantine:0 "Rhomaion"
  BYZ_ideas:0 "Rhomaion Ideas"
  BYZ_ideas_start:0 "Rhomaion Traditions"
