--- a/!!amotf/localisation/varangian_guard_l_english.yml
+++ b/!!amotf/localisation/varangian_guard_l_english.yml
@@ -1,7 +1,8 @@
 ﻿l_english:
  FEO:0 "Gothia"
  #BYZ:0 "Basileia von Rhomaion"
- BYZ:0 "Basileia Rhoma"
+ ##BYZ:0 "Basileia Rhoma"
+ BYZ:0 "Basileia Imperia Rhomaion"
  BYZ_ADJ:0 "Rhomaion"
  BYZ_ADJ2:0 "Byzantine"
  LAT:0 "Duchy de Latin"
