--- a/!!amotf/localisation/varangian_guard_l_english.yml
+++ b/!!amotf/localisation/varangian_guard_l_english.yml
@@ -36,13 +36,18 @@
  varangian_trade:0 "Legacy of the traders"
  varangian_trade_desc:0 "The Varangian were very skilled traders, and found themself traiding from the British Islands to the Arabic Peninsula, we must follow this path aswell"
  varangian_loot:0 "Legacy of the looters"
- varangian_loot_desc:0 "They were also famous looters..."
+ varangian_loot_desc:0 "They were also famous looters who pillaged any who stood against them."
  varangian_manpower:0 "Everyone wants to join"
- varangian_manpower_desc:0 "Recruits from all over the known world wish to join our ranks, we truly are a safe haven for whoever can fight and not only"
+ varangian_manpower_desc:0 "Recruits from all over the known world wish to join our ranks, we truly are a safe haven for whoever can fight"
  varangian_production:0 "Legacy of the artisans"
- varangian_production_desc:0 "And of course the Varangian were skilled artisans aswell, just look at those ships..."
+ varangian_production_desc:0 "And of course the Varangian were skilled artisans aswell, just look at those ships."
  varangian_conversion:0 "Purge the heretic"
  varangian_conversion_desc:0 "Burn the heretic, kill the heaten, purge the unbeliver"
+
+ viceroy_reform:0 "Imperial Autocracy - Viceroyalty"
+ viceroy_reform_desc:0 "WIP"
+ vgo_merchants_reform:0 "Varangian Republic"
+ vgo_merchants_reform:0 "WIP"
 
  flavor_motf.t3:0 "Iraqi Migration"
  flavor_motf.d3:0 "People from the Capitol and countryside are flooding into our newly won Teritory in the east. This has caused a hybrid culture to appear in the largest reigonal city. This Arabic Hellenic culture should make the region easier to control"
