--- a/!!amotf/localisation/MOTF_l_english.yml
+++ b/!!amotf/localisation/MOTF_l_english.yml
@@ -1,24 +1,26 @@
 ﻿l_english:
-  
+
  viceroy_reform:0 "Imperial Autocracy - Viceroyalty"
- viceroy_reform_desc:0 "WIP"
+ viceroy_reform_desc:0 "The Empire of Romans, or Anatolikí Romaïkí Aftokratoría, was not the normal Feudal or Aristocratic state. This government is to represent it as as a system of titles that are not inheritable upon the death of the title holder. It is simaler to the Exarch system in this manner."
  viceroy_sub_reform:0 "Imperial Viceroyal Exarch"
- viceroy_sub_reform_desc:0 "WIP"
+ viceroy_sub_reform_desc:0 "These states sit between a vassal, a march and an Exarch. This government swears loyalty to the empire in return for significant autonomy and defenses."
  vgo_merchants_reform:0 "Varangian Republic"
- vgo_merchants_reform:0 "WIP"
+ vgo_merchants_reform_desc:0 "The Varangian Merchant Republic is simalar to the Venitians in many ways. Their government is broken up by language. Warrior Varangians make up the Parlement, the Goths make up the Doges and the Greeks made up the merchant voting base. This break down leads to many deadlocks politically."
+ viceroy_sub_hge_reform:0 "Confederal Viceroy"
+ viceroy_sub_hge_reform_desc:0 "hese states sit between a vassal, a march and an Exarch. This government swears loyalty to the empire in return for significant autonomy and defenses. It holds a confederacy of a Greek ruler, Dutch nobility and German merchants."
 
  flavor_motf.t3:0 "Iraqi Migration"
  flavor_motf.d3:0 "People from the Capitol and countryside are flooding into our newly won Teritory in the east. This has caused a hybrid culture to appear in the largest reigonal city. This Arabic Hellenic culture should make the region easier to control"
  flavor_motf3.EVTOPTA:0 "Glory to Rhomaion!"
 
  flavor_motf.t:0 "The Revolt of Lesbos"
- flavor_motf.d:0 "W.I.P"
- flavor_motf.EVTOPTA:0 "Let the only loyal family keep power!"
+ flavor_motf.d:0 "In the eve of the 1440's, the noble families of the Latin Duchy of Lesbos rebelled against their overlord. The current Duke himseld remains loyal, his family being one of the only ones to do so. Thankfully our local garrisons have remained loyal and the majority of their army has defected to our side. We have swiftly defeated the trators and they have given their demands. The seek increased privilages and to become our march. We noew have two choices; give in or execute them all and integrate the nation."
+ flavor_motf.EVTOPTA:0 "Kill them all and let the only loyal family keep power!"
  flavor_motf.EVTOPTB:0 "We dont have time, give into the demands..."
 
  flavor_motf.t2:0 "The Union With Athens"
- flavor_motf.d2:0 "W.I.P"
- flavor_motf2.EVTOPTA:0 "Give a concesion for Union!"
+ flavor_motf.d2:0 "After the union and concesions to the latin Lesbos six years ago, the Athenians are asking for the same concesions in return for a closer union with us."
+ flavor_motf2.EVTOPTA:0 "Give a concesion for a greater Union!"
 
  motf_gran_city:0 "Gran City Europa"
  desc_motf_gran_city:0 "This is one of the major cities of Europa and, as such, is granted bonuses accordingly."
@@ -27,7 +29,7 @@
  motf_gran_city_byz:0 "City of the worlds desire"
  desc_motf_gran_city_byz:0 "As Constantine's city, Jewel of the East, and the Grand City of The Worlds Desire, we must bring our City to true glory."
  motf_gran_city_byz2:0 "Roman Co-Kapital"
- desc_motf_gran_city_byz2:0 "As the co-Capital of the Roman Empire in the east, we will reguild to become a grand city"
+ desc_motf_gran_city_byz2:0 "As the co-Capital of the Roman Empire in the east, we will rebuild to become a grand city"
  motf_gran_city_wien:0 "Gran City of Vienna"
  desc_motf_gran_city_wien:0 "This is one of the major cities of the Holy Roman Empire and head of the mighty Habsburg house"
  slav_byz:0 "The Slaviko Influince this area"
@@ -42,3 +44,18 @@
  desc_diplo_reach2:0 "When the Hellenic Side of our dynasty joined, we gained connections to the East. We also benifit from the skills and gifts the Romans give."
  latin_bad:0 "We are still outsiders"
  desc_latin_bad:0 "After the failed Council of Florence, The fourth Crusade and the fact we still have not fully been recognized by the populace, we are not able to manage much in the way of conversion."
+ holy_german:0 "Confederation of Barbarians"
+ desc_holy_german:0 "We are at the absolute edge of the Imperial reach and are loyal now to two Imperial Masters. We have become a confederation of Goths, Dutch and Germans and will find a way to survive. With or without our southern overlords."
+ hg_defence:0 "Hybrid Defences of East and West"
+ desc_hg_defence:0 "We stand alone at the foot of the Rhine, the homeland of the von Komnenos dynasty after 1298 and must make our final stand here!"
+ motf_ger:0 "Stong Local German Population"
+ desc_motf_ger:0 "There is a strong Germanic population here."
+ motf_jew:0 "There is a Jewish presense here"
+ desc_motf_jew:0 "This is a provence with a population of Jews that is felt by the locals, giving benifits but at the cost of unrest."
+ komnenos_home:0 "The home of the von Komnenos dynasty"
+ desc_komnenos_home:0 "This area is the home of the German side of the Imperial family, giving it a special place in the heart of the people. This should help ease the tensions in the Area."
+
+ byz_viceroy_title:0 "Imperial Viveroyalty"
+ byz_viceroy_title_plural:0 "Viceroyals"
+ byz_viceroy_is_our:0 "Is our Vicroyalty"
+ byz_viceroy_long_desc:0 "A Viceroyalty is an Imperial subject that is akin to both a march and a vassal. They are stronger and fortified, while still paying tribute."
