--- a/!!amotf/localisation/replace/countries_l_english.yml
+++ b/!!amotf/localisation/replace/countries_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ EPI:0 "Ipeiros"
+ BYZ:0 "Basileia Oströmisches Reich"
  ADA:0 "Adal"
  ADE:1 "Aden"
  AKK:0 "Aq Qoyunlu"
@@ -26,14 +28,14 @@
  BLI:0 "Bali"
  BAN:0 "Banten"
  BAL:0 "Baluchistan"
- BAV:0 "Bavaria"
+ BAV:0 "Bayern"
  BEI:0 "Brunei"
  BEN:0 "Benin"
  BHU:0 "Bhutan"
  BIJ:0 "Bijapur"
  BND:0 "Bundelkhand"
  BNG:0 "Bengal"
- BOH:0 "Bohemia"
+ BOH:0 "Böhmen"
  BOS:0 "Bosna"
  BOU:0 "Bourbonnais"
  BRA:0 "Brandenburg"
@@ -43,8 +45,8 @@
  BRR:0 "Berar"
  BRU:0 "Brunswick"
  BRZ:0 "Brazil"
- BUL:0 "Bulgaria"
- BUR:0 "Burgundy"
+ BUL:0 "Bulgariya"
+ BUR:0 "Bourgogne"
  CAN:0 "Canada"
  CAS:0 "Castilla y Leon"
  CAT:0 "Catalonia"
@@ -67,7 +69,7 @@
  CRT:0 "Crete"
  CYP:0 "Cyprus"
  DAI:0 "Dai Viet"
- DAN:0 "Denmark"
+ DAN:0 "Danmark"
  DAU:0 "Dauphine"
  DLH:0 "Delhi"
  DUL:0 "Dulkadir"
@@ -89,7 +91,7 @@
  GER:0 "Deutschland"
  GOL:0 "Great Horde"
  GOT:0 "Gotland"
- GRA:0 "Granada"
+ GRA:0 "Gharnata"
  GRE:0 "Hellas"
  GUJ:0 "Gujarat"
  GUY:0 "Gascony"
@@ -104,10 +106,10 @@
  HUN:0 "Magyarország"
  HUR:0 "Huron"
  INC:0 "Inca"
- IRE:0 "Ireland"
+ IRE:0 "Eire"
  IRO:0 "Iroquois"
- ITA:0 "Italy"
- JAP:0 "Japan"
+ ITA:0 "Italia"
+ JAP:0 "Nippon"
  KAR:0 "Karaman"
  KAZ:0 "Kazan"
  KBO:0 "Kanem Bornu"
@@ -120,7 +122,7 @@
  KOK:1 "Ferghana"
  KOL:0 "Cologne"
  KON:0 "Kongo"
- KOR:0 "Korea"
+ KOR:0 "Joseon"
  KRK:0 "Carnatic"
  KSH:0 "Kashmir"
  KUR:0 "Kurland"
@@ -129,7 +131,7 @@
  LAP:0 "La Plata"
  LEI:0 "Leinster"
  LIE:0 "Liege"
- LIT:0 "Lithuania"
+ LIT:0 "Lietuva"
  LNA:0 "Lan Na"
  LOA:0 "Loango"
  LOR:0 "Lorraine"
@@ -142,7 +144,7 @@
  MAG:0 "Magdeburg"
  MAI:0 "Mainz"
  MAL:0 "Mali"
- MAM:0 "Mamluks"
+ MAM:0 "Memlükler Sultanate"
  MAN:0 "Mantua"
  MAY:0 "Maya"
  MAZ:0 "Mazovia"
@@ -151,9 +153,9 @@
  MKL:0 "Mecklenburg"
  MKS:0 "Makassar"
  MLC:0 "Malacca"
- MLO:0 "Milan"
+ MLO:0 "Milano"
  MLW:0 "Malwa"
- MNG:0 "Ming"
+ MNG:0 "Míngdài"
  MNS:0 "Thomond"
  MOD:0 "Modena"
  MOE:0 "Morea"
@@ -168,13 +170,13 @@
  NAJ:0 "Najd"
  NAV:0 "Navarra"
  NAX:0 "Naxos"
- NED:0 "Netherlands"
+ NED:0 "Nederland"
  NEV:0 "Nevers"
  NOG:0 "Nogai"
  NOL:0 "Northumberland"
- NOR:0 "Norway"
+ NOR:0 "Norge"
  NOV:0 "Novgorod"
- NPL:0 "Nepal"
+ NPL:0 "Nepali"
  NRM:0 "Normandy"
  NUB:0 "Funj"
  ODH:0 "Oudh"
@@ -184,7 +186,7 @@
  ORI:0 "Orissa"
  ORL:0 "Orleans"
  OYO:0 "Oyo"
- PAL:0 "The Palatinate"
+ PAL:0 "Die Pfalz"
  PAP:0 "Stati Pontifici"
  PAR:0 "Parma"
  PAT:0 "Pattani"
@@ -192,11 +194,11 @@
  PER:0 "Persia"
  PEU:0 "Peru"
  PIC:0 "Picardy"
- PIS:0 "Pisa"
+ PIS:0 "ducato di Pisa"
  POL:0 "Polska"
- POM:0 "Pomerania"
+ POM:0 "Pommern"
  POR:0 "Portugal"
- PRO:0 "Provence"
+ PRO:0 "Duché de Provence"
  PRU:0 "Preußen"
  PSK:0 "Pskov"
  PUN:0 "Punjab"
@@ -210,8 +212,8 @@
  RUS:0 "Rossiyskaya Imperiya"
  RYA:0 "Ryazan"
  RYU:0 "Ryukyu"
- SAR:0 "Sardinia"
- SAV:0 "Savoy"
+ SAR:0 "Sardegna"
+ SAV:0 "Cavolo Verzotto"
  SAX:0 "Sachsen"
  SCO:0 "Scotland"
  SER:0 "Srbija"
@@ -220,24 +222,24 @@
  SHR:0 "Sharjah"
  SHY:0 "Uzbek"
  SIB:0 "Sibir"
- SIC:0 "Sicily"
+ SIC:0 "Sicilia"
  SIE:0 "Siena"
- SIL:0 "Silesia"
+ SIL:0 "Schlesien"
  SLZ:0 "Salzburg"
  SND:1 "Sindh"
  SOF:0 "Segu"
  SON:0 "Songhai"
  SPA:0 "España"
  SST:0 "Shan"
- STY:0 "Styria"
+ STY:0 "Steiermark"
  SUL:0 "Sulu"
- SWE:0 "Sweden"
- SWI:0 "Switzerland"
+ SWE:0 "Sverige"
+ SWI:0 "Schweiz"
  TAU:0 "Taungu"
  TEU:0 "Teutonic Order"
  THU:0 "Thuringia"
  TIB:0 "Tibet"
- TIM:0 "Timurids"
+ TIM:0 "Timurid Empire"
  TIR:0 "Tirol"
  TOK:0 "Tonkin"
  TOU:0 "Toulouse"
@@ -861,8 +863,8 @@
  MYA_ADJ:0 "Mong Yang"
  AVA:0 "Ava"
  AVA_ADJ:0 "Avan"
- FEO:0 "Theodoro"
- FEO_ADJ:0 "Theodorian"
+ FEO:0 "Gothia"
+ FEO_ADJ:0 "Gothic"
  VOL:0 "Galicia–Volhynia"
  VOL_ADJ:0 "Volhynian"
  KIE:0 "Kiev"
