--- a/!!amotf/localisation/varangian_guard_l_english.yml
+++ b/!!amotf/localisation/varangian_guard_l_english.yml
@@ -14,8 +14,10 @@
  PTS_ADJ:0 "Portan"
  MKD:0 "Makadon"
  MKD_ADJ:0 "Makadonian"
- ETZ:0 "Etruskany"
- ETZ_ADJ:0 "Etruskan"
+ #ETZ:0 "Etruskany"
+ #ETZ_ADJ:0 "Etruskan"
+ ETZ:0 "Regnum Rhom"
+ ETZ_ADJ:0 "Weströmisch"
  KMG:0 "Pheonix Knights"
  KMG_ADJ:0 "Knights"
  byzantine:0 "Rhomaion"
@@ -26,6 +28,7 @@
  VGO_ADJ:0 "Varangian"
  VGO_ADJ2:0 "Varangian"
  varangian:0 "Varangian"
+
  varangian_ideas:0 "Varangian Ideas"
  varangian_ideas_start:0 "Varangian Traditions"
  varangian_ideas_bonus:0 "Varangian Ambition"
