--- a/!!amotf/localisation/!!amotf_countries_l_english.yml
+++ b/!!amotf/localisation/!!amotf_countries_l_english.yml
@@ -12,8 +12,8 @@
  LAT_ADJ2:0 "Latin"
  ARV:0 "Aravika"
  ARV_ADJ:0 "Aravi"
- PTS:0 "Portius Thyrida"
- PTS_ADJ:0 "Portan"
+ PTS:0 "Visagothaye"
+ PTS_ADJ:0 "Vissagothic"
  MKD:0 "Makadon"
  MKD_ADJ:0 "Makadonian"
  ETZ:0 "Regnium Italica"
@@ -41,7 +41,7 @@
  Imperial:0 "Imperiya"
  greek:0 "Hellenic"
  roma_egyptian:0 "Æygýptios"
- anglo_germani:0 "Anglo-Germanic"
+ anglo_germani:0 "Anglo-Deutsche"
 
  varangian_ideas:0 "Varangian Ideas"
  varangian_ideas_start:0 "Varangian Traditions"
