--- a/!!amotf/localisation/replace/countries_l_english.yml
+++ b/!!amotf/localisation/replace/countries_l_english.yml
@@ -1,4 +1,30 @@
 ﻿l_english:
+ BYZ_ADJ:0 "Rhomaion"
+ BYZ_ADJ2:0 "Byzantine"
+ LAT:0 "Duchy di Latin"
+ LAT_ADJ:0 "Latins"
+ LAT_ADJ2:0 "Latin"
+ ARV:0 "Aravika"
+ ARV_ADJ:0 "Aravi"
+ PTS:0 "Visagothaye"
+ PTS_ADJ:0 "Vissagothic"
+ MKD:0 "Makadon"
+ MKD_ADJ:0 "Makadonian"
+ ETZ:0 "Regnium Italica"
+ ETZ_ADJ:0 "Italiae"
+ KMG:0 "Pheonix Knights"
+ KMG_ADJ:0 "Knights"
+ byzantine:0 "Rhomaion"
+ BYZ_ideas:0 "Rhomaion Ideas"
+ BYZ_ideas_start:0 "Rhomaion Traditions"
+ BYZ_ideas_bonus:0 "Rhomaion Ambition"
+ VGO:0 "Varangian Order"
+ VGO_ADJ:0 "Varangian"
+ VGO_ADJ2:0 "Varangian"
+ HGR:0 "Vestrýa Ænglia"
+ HGR_ADJ:0 "Vestrýan"
+ CPT:0 "Æygýptios Faraó"
+ CPT_ADJ:0 "Æygýptiosi"
  EPI:0 "Ipeiros"
  BYZ:0 "Basileia Oströmisches Reich"
  ADA:0 "Adal"
