--- a/!!amotf/localisation/00_AMOTF_ideas_l_english.yml
+++ b/!!amotf/localisation/00_AMOTF_ideas_l_english.yml
@@ -5,10 +5,10 @@
  varangian_ideas_bonus:0 "Varangian Ambition"
  varangian_arsenal:0 "Grand Arsenal of Varangia"
  varangian_arsenal_desc:0 "Being paid by the Roman Empire has its charm, none can bring us as much honour as them, or as much trade. This helped build our grand port."
- defend_the_traders:0 "To empório kai tin ámyna"
+ defend_the_traders:0 "To Emporio Kai Tin Amyna"
  defend_the_traders_desc:0 "Trade and Defence has become our motto. We must defend ourselves and our Emperor as well as our traders."
- varangian_printing_industry :0 "Rival the Venitian Printers"
- varangian_printing_industry _desc:0 "Our rivals systems of printing have Given them a diplomatic advantage. We now use it to help our merchants to spite them."
+ varangian_printing_industry:0 "Rival the Venitian Printers"
+ varangian_printing_industry_desc:0 "Our rivals systems of printing have Given them a diplomatic advantage. We now use it to help our merchants to spite them."
  the_east_trade:0 "Legacy of the traders"
  the_east_trade_desc:0 "The Varangian were very skilled traders, and found themself traiding from the British Islands to the Arabic Peninsula, we must follow this path aswell and surpass the Italians."
  the_state_inquisition:0 "Legacy of the Berserkers"
